src/objects/ints__LenddoParameter__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Lenddo constants</description>
    <fields>
        <fullName>ints__Host_Url__c</fullName>
        <label>Host Url</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Lenddo_Host_URL__c</fullName>
        <label>Lenddo Host URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Lenddo_Verify_API__c</fullName>
        <label>Lenddo Verify API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__User__c</fullName>
        <label>User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__partnerID__c</fullName>
        <label>partnerID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__scriptID__c</fullName>
        <label>scriptID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__secret__c</fullName>
        <label>secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Lenddo Parameter</label>
</CustomObject>